--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,7 +1,7 @@
 ja:
   devise:
     confirmations:
-      confirmed: "アカウント登録が完了しました。ログインしてください。"
+      confirmed: "メールアドレスの認証が完了しました。"
       send_instructions: "アカウント登録用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。"
       send_paranoid_instructions: "アカウント登録用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。"
     failure:
@@ -16,7 +16,7 @@ ja:
       unconfirmed: "認証されていないメールアドレスです。認証用メールを確認してください。"
     mailer:
       confirmation_instructions:
-        subject: "[Utakata]アカウント登録"
+        subject: "[Utakata]メールアドレス認証"
       reset_password_instructions:
         subject: "[Utakata]パスワード再設定"
       unlock_instructions:
@@ -39,8 +39,8 @@ ja:
       signed_up: "アカウント登録が完了しました。"
       signed_up_but_inactive: "アカウントは登録されていますが、アクティブでないためログインできません。"
       signed_up_but_locked: "アカウントは登録されていますが、ロックされているためログインできません。"
-      signed_up_but_unconfirmed: "アカウント登録用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。"
-      update_needs_confirmation: "アカウント情報を更新しました。更新確認用のメールを送信したので、本文のリンクをクリックしてください。"
+      signed_up_but_unconfirmed: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。"
+      update_needs_confirmation: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。"
       updated: "アカウント情報を更新しました。"
     sessions:
       signed_in: "ログインしました。"
