--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -207,3 +207,10 @@ ja:
     password: パスワード
     current_password: 現在のパスワード
     name: ハンドルネーム
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "&hellip;"
