--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,8 +2,8 @@ ja:
   devise:
     confirmations:
       confirmed: "メールアドレスの認証が完了しました"
-      send_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メール到着にはしばらく時間がかかることがあります。"
-      send_paranoid_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メール到着にはしばらく時間がかかることがあります。"
+      send_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メールの到着にはしばらく時間がかかることがあります。"
+      send_paranoid_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メールの到着にはしばらく時間がかかることがあります。"
     failure:
       already_authenticated: "既にログインしています"
       inactive: "アカウントがアクティブになっていません"
@@ -39,8 +39,8 @@ ja:
       signed_up: "アカウント登録が完了しました"
       signed_up_but_inactive: "アカウントは登録されていますが、アクティブでないためログインできません"
       signed_up_but_locked: "アカウントは登録されていますが、ロックされているためログインできません"
-      signed_up_but_unconfirmed: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メール到着にはしばらく時間がかかることがあります。"
-      update_needs_confirmation: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メール到着にはしばらく時間がかかることがあります。"
+      signed_up_but_unconfirmed: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メールの到着にはしばらく時間がかかることがあります。"
+      update_needs_confirmation: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。メールの到着にはしばらく時間がかかることがあります。"
       updated: "アカウント情報を更新しました"
     sessions:
       signed_in: "ログインしました"
