ファイル選択後ただちにアイコン画像が更新されるように変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -119,7 +119,7 @@ ja:
       greater_than: "%{attribute}は%{count}より大きい値にしてください"
       greater_than_or_equal_to: "%{attribute}は%{count}以上の値にしてください"
       inclusion: "%{attribute}は一覧にありません"
-      invalid: "%{attribute}は不正な値です"
+      invalid: "%{attribute}が不正です"
       less_than: "%{attribute}は%{count}より小さい値にしてください"
       less_than_or_equal_to: "%{attribute}は%{count}以下の値にしてください"
       model_invalid: "バリデーションに失敗しました: %{errors}"
@@ -203,6 +203,7 @@ ja:
       short: "%y/%m/%d %H:%M"
     pm: 午後
   attributes:
+    avatar_content_type: 画像のファイル種別
     email: メールアドレス
     password: パスワード
     current_password: 現在のパスワード
