--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,63 +2,63 @@ ja:
   activerecord:
     errors:
       messages:
-        record_invalid: "バリデーションに失敗しました: %{errors}"
+        record_invalid: 'バリデーションに失敗しました: %{errors}'
         restrict_dependent_destroy:
-          has_one: "%{record}が存在しているので削除できません"
-          has_many: "%{record}が存在しているので削除できません"
+          has_one: '%{record}が存在しているので削除できません'
+          has_many: '%{record}が存在しているので削除できません'
   date:
     abbr_day_names:
-    - 日
-    - 月
-    - 火
-    - 水
-    - 木
-    - 金
-    - 土
+      - 日
+      - 月
+      - 火
+      - 水
+      - 木
+      - 金
+      - 土
     abbr_month_names:
-    -
-    - 1月
-    - 2月
-    - 3月
-    - 4月
-    - 5月
-    - 6月
-    - 7月
-    - 8月
-    - 9月
-    - 10月
-    - 11月
-    - 12月
+      -
+      - 1月
+      - 2月
+      - 3月
+      - 4月
+      - 5月
+      - 6月
+      - 7月
+      - 8月
+      - 9月
+      - 10月
+      - 11月
+      - 12月
     day_names:
-    - 日曜日
-    - 月曜日
-    - 火曜日
-    - 水曜日
-    - 木曜日
-    - 金曜日
-    - 土曜日
+      - 日曜日
+      - 月曜日
+      - 火曜日
+      - 水曜日
+      - 木曜日
+      - 金曜日
+      - 土曜日
     formats:
-      default: "%Y/%m/%d"
-      long: "%Y年%m月%d日(%a)"
-      short: "%m/%d"
+      default: '%Y/%m/%d'
+      long: '%Y年%m月%d日(%a)'
+      short: '%m/%d'
     month_names:
-    -
-    - 1月
-    - 2月
-    - 3月
-    - 4月
-    - 5月
-    - 6月
-    - 7月
-    - 8月
-    - 9月
-    - 10月
-    - 11月
-    - 12月
+      -
+      - 1月
+      - 2月
+      - 3月
+      - 4月
+      - 5月
+      - 6月
+      - 7月
+      - 8月
+      - 9月
+      - 10月
+      - 11月
+      - 12月
     order:
-    - :year
-    - :month
-    - :day
+      - :year
+      - :month
+      - :day
   datetime:
     distance_in_words:
       about_x_hours:
@@ -72,32 +72,32 @@ ja:
         other: 約%{count}年
       almost_x_years:
         one: 1年弱
-        other: "%{count}年弱"
+        other: '%{count}年弱'
       half_a_minute: 30秒前後
       less_than_x_minutes:
         one: 1分以内
-        other: "%{count}分未満"
+        other: '%{count}分未満'
       less_than_x_seconds:
         one: 1秒以内
-        other: "%{count}秒未満"
+        other: '%{count}秒未満'
       over_x_years:
         one: 1年以上
-        other: "%{count}年以上"
+        other: '%{count}年以上'
       x_days:
         one: 1日
-        other: "%{count}日"
+        other: '%{count}日'
       x_minutes:
         one: 1分
-        other: "%{count}分"
+        other: '%{count}分'
       x_months:
         one: 1ヶ月
-        other: "%{count}ヶ月"
+        other: '%{count}ヶ月'
       x_years:
         one: 1年
-        other: "%{count}年"
+        other: '%{count}年'
       x_seconds:
         one: 1秒
-        other: "%{count}秒"
+        other: '%{count}秒'
     prompts:
       day: 日
       hour: 時
@@ -106,37 +106,37 @@ ja:
       second: 秒
       year: 年
   errors:
-    format: "%{message}"
+    format: '%{message}'
     messages:
-      accepted: "%{attribute}を受諾してください"
-      blank: "%{attribute}を入力してください"
-      present: "%{attribute}は入力しないでください"
-      confirmation: "%{attribute}の入力が一致していません"
-      empty: "%{attribute}を入力してください"
-      equal_to: "%{attribute}は%{count}にしてください"
-      even: "%{attribute}は偶数にしてください"
-      exclusion: "%{attribute}は予約されています"
-      greater_than: "%{attribute}は%{count}より大きい値にしてください"
-      greater_than_or_equal_to: "%{attribute}は%{count}以上の値にしてください"
-      inclusion: "%{attribute}は一覧にありません"
-      invalid: "%{attribute}が不正です"
-      less_than: "%{attribute}は%{count}より小さい値にしてください"
-      less_than_or_equal_to: "%{attribute}は%{count}以下の値にしてください"
-      model_invalid: "バリデーションに失敗しました: %{errors}"
-      not_a_number: "%{attribute}は数値で入力してください"
-      not_an_integer: "%{attribute}は整数で入力してください"
-      odd: "%{attribute}は奇数にしてください"
-      required: "%{attribute}を入力してください"
-      taken: "既に登録されている%{attribute}です"
-      too_long: "%{attribute}は%{count}文字以内で入力してください"
-      too_short: "%{attribute}は%{count}文字以上で入力してください"
-      wrong_length: "%{attribute}は%{count}文字で入力してください"
-      other_than: "%{attribute}は%{count}以外の値にしてください"
+      accepted: '%{attribute}を受諾してください'
+      blank: '%{attribute}を入力してください'
+      present: '%{attribute}は入力しないでください'
+      confirmation: '%{attribute}の入力が一致していません'
+      empty: '%{attribute}を入力してください'
+      equal_to: '%{attribute}は%{count}にしてください'
+      even: '%{attribute}は偶数にしてください'
+      exclusion: '%{attribute}は予約されています'
+      greater_than: '%{attribute}は%{count}より大きい値にしてください'
+      greater_than_or_equal_to: '%{attribute}は%{count}以上の値にしてください'
+      inclusion: '%{attribute}は一覧にありません'
+      invalid: '%{attribute}が不正です'
+      less_than: '%{attribute}は%{count}より小さい値にしてください'
+      less_than_or_equal_to: '%{attribute}は%{count}以下の値にしてください'
+      model_invalid: 'バリデーションに失敗しました: %{errors}'
+      not_a_number: '%{attribute}は数値で入力してください'
+      not_an_integer: '%{attribute}は整数で入力してください'
+      odd: '%{attribute}は奇数にしてください'
+      required: '%{attribute}を入力してください'
+      taken: '既に登録されている%{attribute}です'
+      too_long: '%{attribute}は%{count}文字以内で入力してください'
+      too_short: '%{attribute}は%{count}文字以上で入力してください'
+      wrong_length: '%{attribute}は%{count}文字で入力してください'
+      other_than: '%{attribute}は%{count}以外の値にしてください'
     template:
       body: 次の項目を確認してください
       header:
-        one: "%{model}にエラーが発生しました"
-        other: "%{model}に%{count}個のエラーが発生しました" 
+        one: '%{model}にエラーが発生しました'
+        other: '%{model}に%{count}個のエラーが発生しました'
   helpers:
     select:
       prompt: 選択してください
@@ -147,22 +147,22 @@ ja:
   number:
     currency:
       format:
-        delimiter: ","
-        format: "%n%u"
+        delimiter: ','
+        format: '%n%u'
         precision: 0
-        separator: "."
+        separator: '.'
         significant: false
         strip_insignificant_zeros: false
         unit: 円
     format:
-      delimiter: ","
+      delimiter: ','
       precision: 3
-      separator: "."
+      separator: '.'
       significant: false
       strip_insignificant_zeros: false
     human:
       decimal_units:
-        format: "%n %u"
+        format: '%n %u'
         units:
           billion: 十億
           million: 百万
@@ -176,7 +176,7 @@ ja:
         significant: true
         strip_insignificant_zeros: true
       storage_units:
-        format: "%n%u"
+        format: '%n%u'
         units:
           byte: バイト
           gb: GB
@@ -186,7 +186,7 @@ ja:
     percentage:
       format:
         delimiter: ''
-        format: "%n%"
+        format: '%n%'
     precision:
       format:
         delimiter: ''
@@ -198,9 +198,9 @@ ja:
   time:
     am: 午前
     formats:
-      default: "%Y/%m/%d %H:%M:%S"
-      long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
-      short: "%y/%m/%d %H:%M"
+      default: '%Y/%m/%d %H:%M:%S'
+      long: '%Y年%m月%d日(%a) %H時%M分%S秒 %z'
+      short: '%y/%m/%d %H:%M'
     pm: 午後
   attributes:
     avatar_content_type: 画像のファイル種別
@@ -211,10 +211,11 @@ ja:
     profile: 自己紹介
     twitter_id: Twitterアカウント
     tanka: 短歌
+    published_at: 投稿日時
   views:
     pagination:
-      first: "&laquo; 最初"
-      last: "最後 &raquo;"
-      previous: "&lsaquo; 前"
-      next: "次 &rsaquo;"
-      truncate: "&hellip;"
+      first: '&laquo; 最初'
+      last: '最後 &raquo;'
+      previous: '&lsaquo; 前'
+      next: '次 &rsaquo;'
+      truncate: '&hellip;'
