--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -1,62 +1,62 @@
 ja:
   devise:
     confirmations:
-      confirmed: "メールアドレスの認証が完了しました"
-      send_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。"
-      send_paranoid_instructions: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。"
+      confirmed: 'メールアドレスの認証が完了しました'
+      send_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
+      send_paranoid_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
     failure:
-      already_authenticated: "既にログインしています"
-      inactive: "アカウントがアクティブになっていません"
-      invalid: "メールアドレスまたはパスワードが正しくありません"
-      locked: "アカウントがロックされています"
-      last_attempt: "あと1回認証に失敗するとアカウントがロックされます"
-      not_found_in_database: "メールアドレスまたはパスワードが正しくありません"
-      timeout: "一定時間が経過したため、ログアウトしました。再度ログインしてください。"
-      unauthenticated: "ログインまたは新規アカウント登録を行ってください"
-      unconfirmed: "認証されていないメールアドレスです。認証用メールを確認してください。"
+      already_authenticated: '既にログインしています'
+      inactive: 'アカウントがアクティブになっていません'
+      invalid: 'メールアドレスまたはパスワードが正しくありません'
+      locked: 'アカウントがロックされています'
+      last_attempt: 'あと1回認証に失敗するとアカウントがロックされます'
+      not_found_in_database: 'メールアドレスまたはパスワードが正しくありません'
+      timeout: '一定時間が経過したため、ログアウトしました。再度ログインしてください。'
+      unauthenticated: 'ログインまたは新規アカウント登録を行ってください'
+      unconfirmed: '認証されていないメールアドレスです。認証用メールを確認してください。'
     mailer:
       confirmation_instructions:
-        subject: "[Utakata]メールアドレス認証"
+        subject: '[Utakata]メールアドレス認証'
       reset_password_instructions:
-        subject: "[Utakata]パスワード再設定"
+        subject: '[Utakata]パスワード再設定'
       unlock_instructions:
-        subject: "アカウントロック解除"
+        subject: 'アカウントロック解除'
       email_changed:
-        subject: "メールアドレスを変更しました"
+        subject: 'メールアドレスを変更しました'
       password_change:
-        subject: "パスワードを変更しました"
+        subject: 'パスワードを変更しました'
     omniauth_callbacks:
-      failure: "ログインできませんでした。もう一度お試しください。"
-      success: "Twitterアカウントでログインしました"
+      failure: 'ログインできませんでした。もう一度お試しください。'
+      success: 'Twitterアカウントでログインしました'
     passwords:
-      no_token: "このページは、アカウント登録用メールのリンクを経由した場合にのみアクセス可能となっています"
-      send_instructions: "パスワード再設定用のメールを送信しました"
-      send_paranoid_instructions: "パスワード再設定用のメールを送信しました"
-      updated: "パスワードを変更しました。ログインしています。"
-      updated_not_active: "パスワードを変更しました"
+      no_token: 'このページは、パスワード再設定用メールのリンクを経由した場合にのみアクセス可能となっています'
+      send_instructions: 'パスワード再設定用のメールを送信しました'
+      send_paranoid_instructions: 'パスワード再設定用のメールを送信しました'
+      updated: 'パスワードを変更しました。ログインしています。'
+      updated_not_active: 'パスワードを変更しました'
     registrations:
-      destroyed: "アカウントを削除しました。またのご利用をお待ちしています。"
-      signed_up: "アカウント登録が完了しました"
-      signed_up_but_inactive: "アカウントは登録されていますが、アクティブでないためログインできません"
-      signed_up_but_locked: "アカウントは登録されていますが、ロックされているためログインできません"
-      signed_up_but_unconfirmed: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。"
-      update_needs_confirmation: "確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。"
-      updated: "アカウント情報を更新しました"
+      destroyed: 'アカウントを削除しました。またのご利用をお待ちしています。'
+      signed_up: 'アカウント登録が完了しました'
+      signed_up_but_inactive: 'アカウントは登録されていますが、アクティブでないためログインできません'
+      signed_up_but_locked: 'アカウントは登録されていますが、ロックされているためログインできません'
+      signed_up_but_unconfirmed: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
+      update_needs_confirmation: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
+      updated: 'アカウント情報を更新しました'
     sessions:
-      signed_in: "ログインしました"
-      signed_out: "ログアウトしました"
-      already_signed_out: "ログアウトしています"
+      signed_in: 'ログインしました'
+      signed_out: 'ログアウトしました'
+      already_signed_out: 'ログアウトしています'
     unlocks:
-      send_instructions: "アカウントロック解除用のメールを送信しました"
-      send_paranoid_instructions: "アカウントロック解除用のメールを送信しました"
-      unlocked: "アカウントのロックが解除されました。ログインしてください。"
+      send_instructions: 'アカウントロック解除用のメールを送信しました'
+      send_paranoid_instructions: 'アカウントロック解除用のメールを送信しました'
+      unlocked: 'アカウントのロックが解除されました。ログインしてください。'
   errors:
     messages:
-      already_confirmed: "既に登録が完了している%{attribute}です"
-      confirmation_period_expired: "%{period}以内に認証する必要があります。もう一度登録してください。"
-      expired: "一定時間が経過したため、もう一度登録してください"
-      not_found: "登録されていない%{attribute}です"
-      not_locked: "ロックされていません"
+      already_confirmed: '既に登録が完了している%{attribute}です'
+      confirmation_period_expired: '%{period}以内に認証する必要があります。もう一度登録してください。'
+      expired: '一定時間が経過したため、もう一度登録してください'
+      not_found: '登録されていない%{attribute}です'
+      not_locked: 'ロックされていません'
       not_saved:
-        one: ""
-        other: ""
+        one: ''
+        other: ''
