--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,8 +2,8 @@ ja:
   devise:
     confirmations:
       confirmed: 'メールアドレスの認証が完了しました'
-      send_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
-      send_paranoid_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
+      send_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
+      send_paranoid_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
     failure:
       already_authenticated: '既にログインしています'
       inactive: 'アカウントがアクティブになっていません'
@@ -39,8 +39,8 @@ ja:
       signed_up: 'アカウント登録が完了しました'
       signed_up_but_inactive: 'アカウントは登録されていますが、アクティブでないためログインできません'
       signed_up_but_locked: 'アカウントは登録されていますが、ロックされているためログインできません'
-      signed_up_but_unconfirmed: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
-      update_needs_confirmation: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。しばらくしてもメールが届かない場合は、メールアドレスのスペルミスの可能性があるので、もう一度登録画面から正しいメールアドレスを登録してみてください。'
+      signed_up_but_unconfirmed: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
+      update_needs_confirmation: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
       updated: 'アカウント情報を更新しました'
     sessions:
       signed_in: 'ログインしました'
@@ -52,7 +52,7 @@ ja:
       unlocked: 'アカウントのロックが解除されました。ログインしてください。'
   errors:
     messages:
-      already_confirmed: '既に登録が完了している%{attribute}です'
+      already_confirmed: '既に認証が完了している%{attribute}です'
       confirmation_period_expired: '%{period}以内に認証する必要があります。もう一度登録してください。'
       expired: '一定時間が経過したため、もう一度登録してください'
       not_found: '登録されていない%{attribute}です'
