--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -5,7 +5,7 @@ ja:
       send_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
       send_paranoid_instructions: '確認用のメールを送信しました。本文のリンクをクリックしてメールアドレスを認証してください。'
     failure:
-      already_authenticated: '既にログインしています'
+      already_authenticated: 'すでにログインしています'
       inactive: 'アカウントがアクティブになっていません'
       invalid: 'メールアドレスまたはパスワードが正しくありません'
       locked: 'アカウントがロックされています'
@@ -52,7 +52,7 @@ ja:
       unlocked: 'アカウントのロックが解除されました。ログインしてください。'
   errors:
     messages:
-      already_confirmed: '既に認証が完了している%{attribute}です'
+      already_confirmed: 'すでに認証が完了している%{attribute}です'
       confirmation_period_expired: '%{period}以内に認証する必要があります。もう一度登録してください。'
       expired: '一定時間が経過したため、もう一度登録してください'
       not_found: '登録されていない%{attribute}です'
